--- a/Employee.css
+++ b/Employee.css
@@ -2,10 +2,59 @@
     color: red;
 }
 
+.inputInformation {
+    color: gray;
+}
+
 th {
     padding: 10px;
 }
 
 td {
     padding: 10px
+}
+
+.generalForm {
+    margin-top: 1%;
+    margin-left: 2%;
+}
+
+.pageHeading {
+    margin-top: 4.5%;
+    margin-left: 2%;
+}
+
+.tableMargin {
+    margin-top: 1%;
+    margin-left: 2%;
+    border: 1;
+}
+
+.buttonMargin {
+    margin-top: 1%;
+    margin-left: 2%;
+    margin-bottom: 1%;
+}
+
+.form-textBox {
+    border: 1px solid gray-dark;
+    border-radius: .25rem;
+    padding: .375rem .75rem;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    font-size: 1rem;
+    line-height: 1.5;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
+}
+
+.form-dropDown {
+    border: 1px solid gray-dark;
+    border-radius: .25rem;
+    padding: .375rem .75rem;
+    color: #495057;
+    background-color: #fff;
+    font-size: 1rem;
+    line-height: 1.5;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
 }
