--- a/Employee.css
+++ b/Employee.css
@@ -24,6 +24,11 @@ td {
     margin-left: 2%;
 }
 
+.pageSubHeading {
+    margin-top: 1%;
+    margin-left: 2%;
+}
+
 .tableMargin {
     margin-top: 1%;
     margin-left: 2%;
